# R2V_GRAD_2

./: CHANGELOG.md  INTEGRATION_GUIDE.md  INTEGRATION_REPORT.md
.github/workflows/: deploy_pages.yml
backend/: .env  .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/.github/workflows/: ci.yml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_verification_codes.py  0003_oauth_accounts.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routers/: ai_jobs.py  assets_download.py  auth.py  billing.py  dashboard.py  marketplace.py  me.py  notifications.py  scan_jobs.py  social.py  stripe_webhook.py
backend/app/api/schemas/: auth.py  billing.py  common.py  jobs.py  marketplace.py  me.py  social.py
backend/app/core/: config.py  errors.py  logging.py  rate_limit.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/db/models/: __init__.py  audit.py  jobs.py  marketplace.py  oauth_account.py  social.py  user.py
backend/app/services/: entitlements.py  redis_client.py  s3.py  stripe_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/app/workers/adapters/: image_gen.py  model_gen.py  photogrammetry.py  repair.py
backend/docker/: Dockerfile.api  Dockerfile.worker  entrypoint.api.sh  entrypoint.minio_init.sh
backend/tests/: test_auth.py
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/linux/: CMakeLists.txt
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
(+78 files in other folders)
